fix(empty): demo align design

--- a/src/empty/_example/empty-page.less
+++ b/src/empty/_example/empty-page.less
@@ -10,4 +10,10 @@ page {
   &__actions {
     margin-top: 128rpx !important;
   }
+
+  &__button {
+    width: 320rpx !important;
+    height: 72rpx !important;
+    line-height: 72rpx !important;
+  }
 }
